added logout api
